🐛 FIX: breaking white space

--- a/src/scss/blocks/_time.scss
+++ b/src/scss/blocks/_time.scss
@@ -18,12 +18,12 @@
   }
 
   .greeting-wrapper {
-    display: flex;
-    justify-content: flex-start;
+    // display: flex;
+    // justify-content: flex-start;
 
-    span:not(.icon) {
-      inline-size: max-content;
-    }
+    // span:not(.icon) {
+    //   inline-size: max-content;
+    // }
 
     .icon {
       margin-block-start: 2px;
